# openapi.json
@@ -3957,7 +3957,10 @@
                     "filename",
                     "mimeType",
                     "size",
-                    "url"
+                    "url",
+                    "width",
+                    "height",
+                    "blurhash"
                   ],
                   "properties": {
                     "id": {
@@ -3974,6 +3977,36 @@
                     },
                     "url": {
                       "type": "string"
+                    },
+                    "width": {
+                      "anyOf": [
+                        {
+                          "type": "number"
+                        },
+                        {
+                          "type": "null"
+                        }
+                      ]
+                    },
+                    "height": {
+                      "anyOf": [
+                        {
+                          "type": "number"
+                        },
+                        {
+                          "type": "null"
+                        }
+                      ]
+                    },
+                    "blurhash": {
+                      "anyOf": [
+                        {
+                          "type": "string"
+                        },
+                        {
+                          "type": "null"
+                        }
+                      ]
                     }
                   },
                   "additionalProperties": false
@@ -4693,7 +4726,10 @@
           "filename",
           "mimeType",
           "size",
-          "url"
+          "url",
+          "width",
+          "height",
+          "blurhash"
         ],
         "properties": {
           "id": {
@@ -4710,6 +4746,36 @@
           },
           "url": {
             "type": "string"
+          },
+          "width": {
+            "anyOf": [
+              {
+                "type": "number"
+              },
+              {
+                "type": "null"
+              }
+            ]
+          },
+          "height": {
+            "anyOf": [
+              {
+                "type": "number"
+              },
+              {
+                "type": "null"
+              }
+            ]
+          },
+          "blurhash": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ]
           }
         },
         "additionalProperties": false
